--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ Using Android Studio for this Project</div>
 </a>
 </div-->
 <div class="col-project-box col-sm-6 col-md-4 col-lg-4">
-<a href="" class="project-box">
+<a href="https://github.com/himanshi0424/himanshi0424.github.io" class="project-box">
 <div class="project-box-inner">
 <h5>Portfolio<br>Website</h5>
 <div class="project-category">Made a personal portfolio website with the help of HTML5 and done the designing with the help of CSS3. 
@@ -365,7 +365,7 @@ Using Android Studio for this Project</div>
 </a>
 </div>
 <div class="col-project-box col-sm-6 col-md-4 col-lg-4">
-<a href="" class="project-box">
+<a href="https://github.com/himanshi0424/Banking-Application-Project-CPP" class="project-box">
 <div class="project-box-inner">
 <h5>Banking <br> Application Project</h5>
 <div class="project-category">Made the banking application project with the  help of C++. This project covers all the basic functions of Banks i.e 
