--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@ Using Android Studio for this Project</div>
 <div class="review-carousel owl-carousel">
 <div class="review-carousel-item">
 <div class="text">
-<p>“ Himanshi’s work ethics bare pristine, and he is easily adjustable to a given situation. 
-    Her ability to go out of his way to help others has made her stand out. She would become an appreciated member of any team..</p>
+<p>“ Himanshi’s work ethics bare pristine, and she is easily adjustable to a given situation. 
+    Her ability to go out of her way to help others has made her stand out. She would become an appreciated member of any team..</p>
 </div>
 <div class="review-author">
 <div class="author-name">Himanshu Bhardwaj</div>
@@ -429,7 +429,7 @@ Using Android Studio for this Project</div>
 </div>
 <div class="review-carousel-item">
 <div class="text">
-<p>“It’s rare that you come across standout talent like Himanshi. I had the pleasure of working with him for two years,
+<p>“It’s rare that you come across standout talent like Himanshi. I had the pleasure of working with her for two years,
      collaborating on several project. I was always in awe of Himanshi ability to command a 
      room and get people on board with ideas even people who were initially on completely different pages.
      Himanshi would be an great asset to any team.</p>
@@ -441,7 +441,7 @@ Using Android Studio for this Project</div>
 </div>
 <div class="review-carousel-item">
 <div class="text">
-<p>“ Himanshi is a very skilled in every domain. She is good in each area, he manages everything so nicely. 
+<p>“ Himanshi is a very skilled in every domain. She is good in each area, she manages everything so nicely. 
     I worked with her for 3+ years and discovered her skills not from her words but from her work. 
     I must say, I can't see such a dedicated person in everything whether it's being coding, management, leadership.</p>
 </div>
@@ -453,7 +453,7 @@ Using Android Studio for this Project</div>
 <div class="review-carousel-item">
     <div class="text">
     <p>“Himanshi is a motivated and future thinking leader, who has expertise in different domains.
-        I have worked with her for more than three and half years- his exceptional work flow, management, skills, ingenuity & leadership made my work productive and effective.
+        I have guided with her for more than three and half years- his exceptional work flow, management, skills, ingenuity & leadership made my work productive and effective.
         Always find him full of enthusiasm and dedicated for the job she is upto. 
         She as a leader is both inspiring and motivating and she working in any institution would prove to be an asset to the organization.</p>
     </div>
