--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ Using Android Studio for this Project</div>
 <div class="review-carousel-item">
     <div class="text">
     <p>“Himanshi is a motivated and future thinking leader, who has expertise in different domains.
-        I have guided her for more than three and half years- his exceptional work flow, management, skills, ingenuity & leadership made my work productive and effective.
+        I have guided her for more than three and half years- her exceptional work flow, management, skills, ingenuity & leadership made my work productive and effective.
         Always find him full of enthusiasm and dedicated for the job she is upto. 
         She as a leader is both inspiring and motivating and she working in any institution would prove to be an asset to the organization.</p>
     </div>
