--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="pagepiling">
 <div data-anchor="page1" class="pp-scrollable text-white section section-1">
 <div class="scroll-wrap">
-<div class="section-bg" style="background-image:url(https://firebasestorage.googleapis.com/v0/b/himanshuresume-4f83e.appspot.com/o/new%2FHimanshi.jpg?alt=media&token=bdf3a1c3-e76a-467f-b913-4580aaa8c3bf);"></div>
+<div class="section-bg" style="background-image:url(https://firebasestorage.googleapis.com/v0/b/himanshuresume-4f83e.appspot.com/o/new%2FFront%20pic.jpg?alt=media&token=2a2d95d0-695f-49d5-a6ca-a8ece9ca7e06);"></div>
 <div class="scrollable-content">
 <div class="vertical-centred">
 <div class="boxed boxed-inner">
